libraries/source/cxxtest-4.4/test/longlong.out
Running cxxtest tests (1 test)
In LongLongTest::testLongLong:
LongLong.h:12: Error: Expected ((long long)1 == (long long)2), found (1 != 2)
LongLong.h:13: Error: Expected ((long long)3 != (long long)3), found (3)
LongLong.h:14: Error: Expected ((long long)5 < (long long)4), found (5 >= 4)
Failed 1 and Skipped 0 of 1 test
Success rate: 0%
Error level = 1
